--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
+  flutter_svg: ^2.0.17
+  gap: ^3.0.1
+  get_it: ^8.0.3
+  go_router: ^14.7.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  injectable: ^2.5.0
+  intl: ^0.20.2
+  json_annotation: ^4.9.0
+  logger: ^2.5.0
+  lottie: ^3.3.0
+  provider: ^6.1.2
+  retrofit: ^4.4.2
+  shared_preferences: ^2.5.1
+  url_launcher: ^6.3.1
+  bloc: ^9.0.0
+  carousel_slider: ^5.0.0
+  dio: ^5.8.0+1
+  either_dart: ^1.0.0
+  equatable: ^2.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
