--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio: ^5.8.0+1
   equatable: ^2.0.7
   cupertino_icons: ^1.0.2
+  expandable_text: ^2.3.0
 
 dev_dependencies:
   flutter_test:
