--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.5.0 <4.0.0'
+  sdk: '>=3.6.2 <4.0.0'
 
 dependencies:
   flutter:
@@ -35,6 +35,9 @@ dependencies:
   sqflite: ^2.4.2
   shimmer: ^3.0.0
   pretty_dio_logger: ^1.4.0
+  flutter_timezone: ^4.1.0
+  timezone: ^0.10.0
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
