--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dev_dependencies:
   json_serializable: ^6.8.0
   retrofit_generator: ^9.1.7
   flutter_lints: ^5.0.0
+  test: ^1.25.15
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
