--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,4 +83,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
+}
